# gemini-watermark-and-synthid-remover

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE-THIRD-PARTY.md  README.md  vcpkg.json
.github/workflows/: release.yml
assets/: embedded_assets.hpp
assets/migan_512_places2_fp16.mlpackage/: Manifest.json
assets/migan_512_places2_fp16.mlpackage/Data/com.apple.CoreML/: model.mlmodel
cmake/: FindFFMPEG.cmake
docs/research/: codebook-free-removal-research.md  synthid-carrier-characterization.md
docs/superpowers/specs/: 2026-05-28-project-roadmap-design.md
scripts/: build.sh  bundle_macos_vulkan.sh  convert_npz_to_wcb.py
src/cli/: batch_processor.cpp  batch_processor.hpp  cli_app.cpp  cli_app.hpp
src/core/: inpaint.hpp  lama_inpainter.cpp  lama_inpainter.hpp  migan_coreml_inpainter.mm  migan_inpainter.cpp  migan_inpainter.hpp  types.hpp  watermark_engine.cpp
src/detection/: synthid_detector.cpp  synthid_detector.hpp
src/synthid/: codebook_subtractor.cpp  noise_residual_subtractor.cpp
src/video/: geometry_detector.cpp  geometry_detector.hpp  notebooklm_detector.cpp  notebooklm_detector.hpp  notebooklm_gates.cpp  notebooklm_gates.hpp  scene_detector.cpp  scene_detector.hpp  video_processor.cpp  video_processor.hpp  video_reader.cpp  video_reader.hpp  video_writer.cpp  video_writer.hpp
tests/: CMakeLists.txt
tests/unit/: geometry_detector_test.cpp  notebooklm_gates_test.cpp
